--- a/.github/workflows/deploy-redis-to-eks.yml
+++ b/.github/workflows/deploy-redis-to-eks.yml
@@ -25,7 +25,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ${{ secrets.AWS_REGION }}
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_ROLE_NAME }}
+          role-to-assume: arn:aws:iam::366000657291:role/bosi-eks-cli
           role-session-name: bosi-eks-cli
           
 
